
    __ https://stackoverflow.com/questions/39547412/same-font-size-for-h1-and-h2-in-article

  - Use HTML text-level tags <small>, <s>, <q>, <dfn>, <var>, <samp>, <kbd>,
    <i>, <b>, <u>, <mark>, and <bdi> if a matching class value
    is found in `inline` and `literal` elements.
    Use <ins> and <del> if a matching class value
    is found in `inline`, `literal`, or `container` elements.

* docutils/writers/html5_polyglot/responsive.css

  - New optional stylesheet that adapts to different screen sizes.

* docutils/writers/html5_polyglot/minimal.css

  - Move non-essential styling to ``plain.css``.
    Support "captionbelow" class value for tables.
    Small fixes and tweaks.

* docutils/writers/html5_polyglot/plain.css

  - Support numbered figures.
  - Fix bug #398: properly close link tag to "schema.dcterms".

* docutils/writers/html5_polyglot/responsive.css

  - New optional stylesheet for better readability on different
    screens.

* docutils/writers/html5_polyglot/minimal.css

  - Move non-essential styling from  to ``plain.css``.
    Support "captionbelow" class value for tables.
    Small fixes and tweaks.

* docutils/writers/html5_polyglot/plain.css

  - Support numbered figures.

* docutils/writers/latex2e/__init__.py:

  - Use LaTeX environments for admonitions and "class wrappers" for styling
    admonitions and titles if the new configuration setting
    `legacy_class_functions`_ is False.

    .. _legacy_class_functions: docs/user/config.html#legacy-class-functions

  - Remove backwards compatibility code for the deprecated
    `styling command`__ prefix ``\docutilsrole``.

    __ docs/user/latex.html#custom-interpreted-text-roles

  - Remove legacy LaTeX stylesheet ``docutils-05-compat.sty``.
  
  - Support the `memoir` LaTeX document class.
    Fixes bugs #390, #391, and #392.

  - The special value "auto" for the `graphicx_option`_ setting
    is no longer supported (it never worked for xetex/luatex).
